crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_11_map_filled.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 357
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nmap xs f =\n    case xs of\n        [] -> []\n        x :: rest -> mkCons (f x) (map rest f)\nmain = eq (map [6, 7, 8] (\\n -> addInteger n 1)) [7, 8, 9]\n"
---
--- unoptimized Core
let fromBool#8 : bool -> bool = \value#31 : bool -> value#31 in
let eq#16 : int -> int -> bool = equalsInteger in
letrec
  eq#2 : list 'erased -> list 'erased -> bool [static []] = \xs#6 : list 'erased ys#7 : list 'erased -> let match#20 : list 'erased = xs#6 in
  case@List match#20 of
    Nil -> let match#9 : list 'erased = ys#7 in
    case@List match#9 of
      Nil -> fromBool#8 true
      Cons field#10 field#11 -> fromBool#8 false
    Cons field#21 field#22 -> let x#12 : 'erased = field#21 in
    let restX#13 : list 'erased = field#22 in
    let match#17 : list 'erased = ys#7 in
    case@List match#17 of
      Nil -> fromBool#8 false
      Cons field#18 field#19 -> let y#14 : 'erased = field#18 in
      let restY#15 : list 'erased = field#19 in
      case@Bool eq#16 x#12 y#14 of
        True -> eq#2 restX#13 restY#15
        False -> false
in
letrec
  map#3 : list 'erased -> ('erased -> int) -> list int [static [1]] = \xs#23 : list 'erased (f#24 : 'erased -> int) -> let match#27 : list 'erased = xs#23 in
  case@List match#27 of
    Nil -> (con (list integer) [])
    Cons field#28 field#29 -> let x#25 : 'erased = field#28 in
    let rest#26 : list 'erased = field#29 in
    mkCons (f#24 x#25) (map#3 rest#26 f#24)
in
let fromInt#4 : int -> int = \value#30 : int -> value#30 in
let main#1 : bool = eq#2 (map#3 (mkCons (fromInt#4 6) (mkCons (fromInt#4 7) (mkCons (fromInt#4 8) (con (list integer) [])))) (\n#5 : int -> addInteger n#5 (fromInt#4 1))) (mkCons (fromInt#4 7) (mkCons (fromInt#4 8) (mkCons (fromInt#4 9) (con (list integer) [])))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_8
    [(lam eq_16
      [(lam eq_2
        [(lam map_3
          [(lam fromInt_4
            [(lam main_1 main_1)
              [[eq_2
                [[map_3
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 6)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 7)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 8)]] (con (list integer) [])]]]]
                  (lam n_5 [[(builtin addInteger) n_5] [fromInt_4 (con integer 1)]])]]
                [[(force (builtin mkCons)) [fromInt_4 (con integer 7)]]
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 8)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 9)]] (con (list integer) [])]]]]])
            (lam value_30 value_30)])
          (lam xs_23
            (lam f_24
              [[(lam self_32 [self_32 self_32])
                (lam self_32
                  (lam xs_23
                    [(lam match_27
                      (case
                        match_27
                        (lam field_28
                          (lam field_29
                            [(lam x_25
                              [(lam rest_26
                                [[(force (builtin mkCons)) [f_24 x_25]] [[self_32 self_32] rest_26]])
                                field_29])
                              field_28]))
                        (con (list integer) [])))
                      xs_23]))]
                xs_23]))])
        [(lam self_33 [self_33 self_33])
          (lam self_33
            (lam xs_6
              (lam ys_7
                [(lam match_20
                  (case
                    match_20
                    (lam field_21
                      (lam field_22
                        [(lam x_12
                          [(lam restX_13
                            [(lam match_17
                              (case
                                match_17
                                (lam field_18
                                  (lam field_19
                                    [(lam y_14
                                      [(lam restY_15
                                        (case
                                          [[eq_16 x_12] y_14]
                                          (con bool False)
                                          [[[self_33 self_33] restX_13] restY_15]))
                                        field_19])
                                      field_18]))
                                [fromBool_8 (con bool False)]))
                              ys_7])
                            field_22])
                          field_21]))
                    [(lam match_9
                      (case
                        match_9
                        (lam field_10 (lam field_11 [fromBool_8 (con bool False)]))
                        [fromBool_8 (con bool True)]))
                      ys_7]))
                  xs_6])))]])
      (builtin equalsInteger)])
    (lam value_31 value_31)])
--- optimized Core
letrec
  eq#35 : list 'erased -> list 'erased -> bool [static []] = \xs#36 : list 'erased ys#37 : list 'erased -> case@List xs#36 of
    Nil -> case@List ys#37 of
      Nil -> true
      Cons field#40 field#41 -> false
    Cons field#42 field#43 -> case@List ys#37 of
      Nil -> false
      Cons field#47 field#48 -> let anf#65 : bool = equalsInteger field#42 field#47 in
      case@Bool anf#65 of
        True -> eq#35 field#43 field#48
        False -> false
in
let anf#71 : list int = mkCons 8 (con (list integer) []) in
let anf#72 : list int = mkCons 7 anf#71 in
let anf#73 : list int = mkCons 6 anf#72 in
letrec
  worker#64 : list 'erased -> list int [static []] = \xs#63 : list 'erased -> case@List xs#63 of
    Nil -> (con (list integer) [])
    Cons field#55 field#56 -> let anf#66 : int = addInteger field#55 1 in
    let anf#67 : list int = worker#64 field#56 in
    mkCons anf#66 anf#67
in
let anf#75 : list int = worker#64 anf#73 in
let anf#76 : list int -> bool = eq#35 anf#75 in
let anf#80 : list int = mkCons 9 (con (list integer) []) in
let anf#81 : list int = mkCons 8 anf#80 in
let anf#82 : list int = mkCons 7 anf#81 in
anf#76 anf#82
--- optimized UPLC
(program 1.1.0
  [(lam builtin_34
    [(lam partial_35
      [(lam partial_36
        [(lam eq_17
          [(lam anf_18
            [(lam anf_19
              [(lam anf_20
                [(lam worker_28
                  [(lam anf_29
                    [(lam anf_30
                      [(lam anf_31
                        [(lam anf_32 [(lam anf_33 [anf_30 anf_33]) [partial_35 anf_32]])
                          [partial_36 anf_31]])
                        [[builtin_34 (con integer 9)] (con (list integer) [])]])
                      [eq_17 anf_29]])
                    [worker_28 anf_20]])
                  [(lam self_21 [self_21 self_21])
                    (lam self_22
                      (lam xs_23
                        (case
                          xs_23
                          (lam field_24
                            (lam field_25
                              [(lam anf_26
                                [(lam anf_27 [[builtin_34 anf_26] anf_27]) [[self_22 self_22] field_25]])
                                [[(builtin addInteger) field_24] (con integer 1)]]))
                          (con (list integer) []))))]])
                [[builtin_34 (con integer 6)] anf_19]])
              [partial_35 anf_18]])
            [partial_36 (con (list integer) [])]])
          [(lam self_6 [self_6 self_6])
            (lam self_7
              (lam xs_8
                (lam ys_9
                  (case
                    xs_8
                    (lam field_12
                      (lam field_13
                        (case
                          ys_9
                          (lam field_14
                            (lam field_15
                              [(lam anf_16
                                (case anf_16 (con bool False) [[[self_7 self_7] field_13] field_15]))
                                [[(builtin equalsInteger) field_12] field_14]]))
                          (con bool False))))
                    (case ys_9 (lam field_10 (lam field_11 (con bool False))) (con bool True))))))]])
        [builtin_34 (con integer 8)]])
      [builtin_34 (con integer 7)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 6503981, memory: 34097
