crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_12_filter_even.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 392
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nfilter xs f =\n    case xs of\n        [] -> []\n        x :: rest ->\n            if f x then mkCons x (filter rest f)\n            else filter rest f\nmain = eq (filter [1, 2, 3, 4, 5, 6] (\\x -> equalsInteger (modInteger x 2) 0)) [2, 4, 6]\n"
---
--- core
let fromBool#8 : bool -> bool = \value#31 : bool -> value#31 in
let eq#16 : int -> int -> bool = equalsInteger in
let eq#2 : list 'erased -> list 'erased -> bool = (\self#33 : @self (list 'erased -> list 'erased -> bool) -> self#33 self#33) (\self#33 : @self (list 'erased -> list 'erased -> bool) xs#6 : list 'erased ys#7 : list 'erased -> let match#20 : list 'erased = xs#6 in
case@List match#20 of
  Nil -> let match#9 : list 'erased = ys#7 in
  case@List match#9 of
    Nil -> fromBool#8 true
    Cons field#10 field#11 -> fromBool#8 false
  Cons field#21 field#22 -> let x#12 : 'erased = field#21 in
  let restX#13 : list 'erased = field#22 in
  let match#17 : list 'erased = ys#7 in
  case@List match#17 of
    Nil -> fromBool#8 false
    Cons field#18 field#19 -> let y#14 : 'erased = field#18 in
    let restY#15 : list 'erased = field#19 in
    case@Bool eq#16 x#12 y#14 of
      True -> self#33 self#33 restX#13 restY#15
      False -> false) in
let filter#3 : list int -> (int -> bool) -> list int = \xs#23 : list int (f#24 : int -> bool) -> (\self#32 : @self (list int -> list int) -> self#32 self#32) (\self#32 : @self (list int -> list int) xs#23 : list int -> let match#27 : list int = xs#23 in
case@List match#27 of
  Nil -> (con (list integer) [])
  Cons field#28 field#29 -> let x#25 : int = field#28 in
  let rest#26 : list int = field#29 in
  case@Bool f#24 x#25 of
    True -> mkCons x#25 (self#32 self#32 rest#26)
    False -> self#32 self#32 rest#26) xs#23 in
let fromInt#4 : int -> int = \value#30 : int -> value#30 in
let main#1 : bool = eq#2 (filter#3 (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 4) (mkCons (fromInt#4 5) (mkCons (fromInt#4 6) (con (list integer) []))))))) (\x#5 : int -> equalsInteger (modInteger x#5 (fromInt#4 2)) (fromInt#4 0))) (mkCons (fromInt#4 2) (mkCons (fromInt#4 4) (mkCons (fromInt#4 6) (con (list integer) [])))) in
main#1
--- uplc
(program 1.1.0
  [(lam fromBool_8
    [(lam eq_16
      [(lam eq_2
        [(lam filter_3
          [(lam fromInt_4
            [(lam main_1 main_1)
              [[eq_2
                [[filter_3
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 5)]]
                            [[(force (builtin mkCons)) [fromInt_4 (con integer 6)]] (con (list integer) [])]]]]]]]
                  (lam x_5
                    [[(builtin equalsInteger)
                      [[(builtin modInteger) x_5] [fromInt_4 (con integer 2)]]]
                      [fromInt_4 (con integer 0)]])]]
                [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 6)]] (con (list integer) [])]]]]])
            (lam value_30 value_30)])
          (lam xs_23
            (lam f_24
              [[(lam self_32 [self_32 self_32])
                (lam self_32
                  (lam xs_23
                    [(lam match_27
                      (case
                        match_27
                        (lam field_28
                          (lam field_29
                            [(lam x_25
                              [(lam rest_26
                                (case
                                  [f_24 x_25]
                                  [[self_32 self_32] rest_26]
                                  [[(force (builtin mkCons)) x_25] [[self_32 self_32] rest_26]]))
                                field_29])
                              field_28]))
                        (con (list integer) [])))
                      xs_23]))]
                xs_23]))])
        [(lam self_33 [self_33 self_33])
          (lam self_33
            (lam xs_6
              (lam ys_7
                [(lam match_20
                  (case
                    match_20
                    (lam field_21
                      (lam field_22
                        [(lam x_12
                          [(lam restX_13
                            [(lam match_17
                              (case
                                match_17
                                (lam field_18
                                  (lam field_19
                                    [(lam y_14
                                      [(lam restY_15
                                        (case
                                          [[eq_16 x_12] y_14]
                                          (con bool False)
                                          [[[self_33 self_33] restX_13] restY_15]))
                                        field_19])
                                      field_18]))
                                [fromBool_8 (con bool False)]))
                              ys_7])
                            field_22])
                          field_21]))
                    [(lam match_9
                      (case
                        match_9
                        (lam field_10 (lam field_11 [fromBool_8 (con bool False)]))
                        [fromBool_8 (con bool True)]))
                      ys_7]))
                  xs_6])))]])
      (builtin equalsInteger)])
    (lam value_31 value_31)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 10163021, memory: 50699
