crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_15_zero_arg.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 400
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (toData)\ntype pairs = Pairs { inner : list (pair Data Data) }\nnew () = Pairs { inner = [] }\nsame (Pairs a) (Pairs b) = equalsData (toData (mapData a)) (toData (mapData b))\nmain = same (new ()) (Pairs { inner = [] })\n"
---
--- unoptimized Core
let toData#10 : 'erased -> Data = \coerce#19 : 'erased -> coerce#19 in
let same#2 : Main.pairs -> Main.pairs -> bool = \arg#6 : Main.pairs arg#8 : Main.pairs -> let match#13 : Main.pairs = arg#6 in
case@Tag match#13 of
  0 field#14 -> let a#7 : list (pair Data Data) = field#14 in
  let match#11 : Main.pairs = arg#8 in
  case@Tag match#11 of
    0 field#12 -> let b#9 : list (pair Data Data) = field#12 in
    equalsData (toData#10 (mapData a#7)) (toData#10 (mapData b#9)) in
let new#3 : unit -> Main.pairs = \arg#15 : unit -> let match#17 : unit = arg#15 in
(\field#16 : list (pair Data Data) -> constr 0 field#16) (con (list (pair data data)) []) in
let fromUnit#4 : unit -> unit = \value#18 : unit -> value#18 in
let main#1 : bool = same#2 (new#3 (fromUnit#4 ())) ((\field#5 : list (pair Data Data) -> constr 0 field#5) (con (list (pair data data)) [])) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam toData_10
    [(lam same_2
      [(lam new_3
        [(lam fromUnit_4
          [(lam main_1 main_1)
            [[same_2 [new_3 [fromUnit_4 (con unit ())]]]
              [(lam field_5 (constr 0 field_5)) (con (list (pair data data)) [])]]])
          (lam value_18 value_18)])
        (lam arg_15
          (case
            arg_15
            [(lam field_16 (constr 0 field_16)) (con (list (pair data data)) [])]))])
      (lam arg_6
        (lam arg_8
          [(lam match_13
            (case
              match_13
              (lam field_14
                [(lam a_7
                  [(lam match_11
                    (case
                      match_11
                      (lam field_12
                        [(lam b_9
                          [[(builtin equalsData) [toData_10 [(builtin mapData) a_7]]]
                            [toData_10 [(builtin mapData) b_9]]])
                          field_12])))
                    arg_8])
                  field_14])))
            arg_6]))])
    (lam coerce_19 coerce_19)])
--- optimized Core
let anf#44 : Main.pairs = constr 0 (con (list (pair data data)) []) in
let anf#46 : Main.pairs = constr 0 (con (list (pair data data)) []) in
case@Tag anf#44 of
  0 field#25 -> case@Tag anf#46 of
    0 field#28 -> let anf#39 : Map Data Data = mapData field#25 in
    let anf#41 : Map Data Data = mapData field#28 in
    equalsData anf#39 anf#41
--- optimized UPLC
(program 1.1.0
  [(lam anf_1
    [(lam anf_2
      (case
        anf_1
        (lam field_3
          (case
            anf_2
            (lam field_4
              [(lam anf_5
                [(lam anf_6 [[(builtin equalsData) anf_5] anf_6]) [(builtin mapData) field_4]])
                [(builtin mapData) field_3]])))))
      (constr 0 (con (list (pair data data)) []))])
    (constr 0 (con (list (pair data data)) []))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2263856, memory: 7165
